styles/style.css
body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;

  padding: 0;
  margin: auto;
  background-color: #383842;
  min-height: 100vh;
  width: 80%;
}

header {
  position: relative;
  background-image: url("../images/header.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 50vh;
}

header img {
  color: white;
  position: absolute;
  height: 50%;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

nav {
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: black;
  border-top: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  color: white;
  text-align: center;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav li {
  display: inline;
}

nav li a {
  text-decoration: none;
  color: white;
  padding: 10px 4%;
  text-align: center;
}
nav li a:hover {
  background-color: #5a5a5a;
  color: rgba(241, 227, 95, 0.89);
}

footer {
  padding: 30px;
  background-color: black;
}

footer p {
  color: #aaaaaa;
  font-style: italic;
  font-size: 15px;
  text-align: center;
}

.home-content {
  padding-top: 70px;
  padding-bottom: 50px;
  padding-left: 20%;
  padding-right: 20%;
  background-color: rgb(70, 76, 105);
  text-align: center;
}

.home-content__summary {
  margin-bottom: 60px;
}

.home-content__summary h2 {
  margin: 0;
  padding-top: 0px;
  color: rgba(241, 227, 95, 0.89);
  font-size: 40px;
}

.home-content__summary p {
  color: white;
  padding: 20px 0;
  font-size: 15px;
}

.book-review {
 padding-bottom: 40px; 
}

.book-review h3 {
  color: white;
}

.book-review q {
  font-style: italic;
  color: #dadada;
}

